--- a/index.htm
+++ b/index.htm
@@ -12,11 +12,11 @@
 <meta name="description" content="Bos Eriko Reyes's Personal Portfolio">
 <meta name="keywords" content="Front-end Website Developer, Programmer, Gamer, Blogger, Thinker">
 <title>Bos Eriko Reyes - Front-end Website Developer</title>
-<link rel="stylesheet" href="bootstrap.min.css">
-<link rel="stylesheet" href="bootstrap-theme.min.css">
-<link type="text/css" rel="StyleSheet" href="personal.css" />
+<link rel="stylesheet" href="style/bootstrap.min.css">
+<link rel="stylesheet" href="style/bootstrap-theme.min.css">
+<link type="text/css" rel="StyleSheet" href="style/personal.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="gfx/favicon.ico" type="image/x-icon"/>
 
 
 
@@ -92,7 +92,7 @@
 <!-- <Header & Navigation> -->
 <header>
 <div class="container clearfix">
-<div class="a-logo"><a href="index.htm"><img src="logo.png" /><span class="sr-only">Home</span></a></div>
+<div class="a-logo"><a href="index.htm"><img src="gfx/logo.png" /><span class="sr-only">Home</span></a></div>
 <nav class="a-nav-holder">
 <ul class="a-nav hidden-sm hidden-xs">
 <li class="active"><a href="index.htm">Home</a></li>
@@ -131,7 +131,7 @@
 <div class="visible-lg" style="height:25px;"></div>
 
 <div class="container">
-<div><img src="display-picture.jpg" /></div>
+<div><img src="gfx/display-picture.jpg" /></div>
 <div><h2>Hello, I'm Bos!</h2></div>
 <div><p>And I'm a front-end website developer.</p></div>
 <div class="a-personal-jumbotron-button"><a href="#skills-showcase"><i class="fa fa-rocket fa-fw"></i>&nbsp;See my skills</a></div>
@@ -241,9 +241,9 @@
 
 
 <!-- <Scripts> -->
-<script src="jquery-2.1.4.min.js"></script>
-<script src="bootstrap.min.js"></script>
-<script src="personal.js"></script>
+<script src="script/jquery-2.1.4.min.js"></script>
+<script src="script/bootstrap.min.js"></script>
+<script src="script/personal.js"></script>
 <!-- </Scripts> -->
 
 
