--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@
 <li><a href="about.htm">About</a></li>
 <li><a href="https://www.behance.net/bos-eriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Go to Behance">Projects</a></li>
 <li><a href="http://boseriko.tumblr.com">Blog</a></li>
-<li><a href="http://goo.gl/forms/xSUrP6gzNe" target="_blank" class="a-nav-hire"><i class="fa fa-heart fa-fw"></i>&nbsp;Hire Me</a></li>
+<li><a href="http://goo.gl/forms/ERQnpbVSv4" target="_blank" class="a-nav-hire"><i class="fa fa-heart fa-fw"></i>&nbsp;Hire Me</a></li>
 </ul>
 <ul class="a-nav hidden-lg hidden-md">
 <li><a href="#" class="a-nav-toggle-button"><i class="fa fa-bars fa-fw"></i>&nbsp;Menu</a></li>
@@ -114,7 +114,7 @@
 <li><a href="about.htm">About</a></li>
 <li><a href="https://www.behance.net/bos-eriko" target="_blank">Projects</a></li>
 <li><a href="http://boseriko.tumblr.com">Blog</a></li>
-<li><a href="http://goo.gl/forms/xSUrP6gzNe" target="_blank">Hire Me</a></li>
+<li><a href="http://goo.gl/forms/ERQnpbVSv4" target="_blank">Hire Me</a></li>
 </ul>
 </nav>
 <!-- </Header & Navigation> -->
@@ -216,7 +216,7 @@
 <div class="jumbotron a-hire-me-jumbotron">
 <div class="container">
 <h1>Need a responsive website?</h1>
-<div><a href="http://goo.gl/forms/xSUrP6gzNe" target="_blank"><i class="fa fa-heart fa-fw"></i>&nbsp;Hire Me</a></div>
+<div><a href="http://goo.gl/forms/ERQnpbVSv4" target="_blank"><i class="fa fa-heart fa-fw"></i>&nbsp;Hire Me</a></div>
 </div>
 </div>
 <!-- </Hire Me> -->
@@ -230,7 +230,7 @@
 <div class="container">
 <div class="row">
 <div class="col-sm-12 col-md-6 a-footer-pull-left">Bos Eriko &copy; 2016 <span style="color:#BFBFBF;">&middot;</span> Made with <i class="fa fa-heart fa-fw" style="color:#ff9999;" data-toggle="tooltip" data-placement="top" title="love"></i> by me <span style="color:#BFBFBF;">&middot;</span> All rights reserved</div>
-<div class="col-sm-12 col-md-6 a-footer-pull-right"><a href="index.htm">Home</a> <span style="color:#D1D1D1;">|</span> <a href="about.htm">About</a> <span style="color:#D1D1D1;">|</span> <a href="https://www.behance.net/bos-eriko" target="_blank" data-toggle="tooltip" data-placement="top" title="Go to Behance">Projects</a> <span style="color:#D1D1D1;">|</span> <a href="http://boseriko.tumblr.com">Blog</a> <span style="color:#D1D1D1;">|</span> <a href="http://goo.gl/forms/xSUrP6gzNe" target="_blank">Hire me</a> <span style="color:#D1D1D1;">|</span> <a href="#a-top-button">Back to Top</a></div>
+<div class="col-sm-12 col-md-6 a-footer-pull-right"><a href="index.htm">Home</a> <span style="color:#D1D1D1;">|</span> <a href="about.htm">About</a> <span style="color:#D1D1D1;">|</span> <a href="https://www.behance.net/bos-eriko" target="_blank" data-toggle="tooltip" data-placement="top" title="Go to Behance">Projects</a> <span style="color:#D1D1D1;">|</span> <a href="http://boseriko.tumblr.com">Blog</a> <span style="color:#D1D1D1;">|</span> <a href="http://goo.gl/forms/ERQnpbVSv4" target="_blank">Hire me</a> <span style="color:#D1D1D1;">|</span> <a href="#a-top-button">Back to Top</a></div>
 </div>
 </div>
 </footer>
