Added Github Link

--- a/index.htm
+++ b/index.htm
@@ -80,6 +80,7 @@
 <li><a href="https://www.behance.net/bos-eriko" target="_blank" class="behance" data-toggle="tooltip" data-placement="bottom" title="Behance"><i class="fa fa-behance fa-fw"></i><span class="sr-only">Behance</span></a></li>
 <li><a href="https://www.instagram.com/boseriko" target="_blank" class="instagram" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram fa-fw"></i><span class="sr-only">Instagram</span></a></li>
 <li><a href="https://www.linkedin.com/in/bos-eriko-reyes-203362a9" target="_blank" class="linkedin" data-toggle="tooltip" data-placement="bottom" title="LinkedIn"><i class="fa fa-linkedin fa-fw"></i><span class="sr-only">LinkedIn</span></a></li>
+<li><a href="https://github.com/BosEriko" target="_blank" class="github" data-toggle="tooltip" data-placement="bottom" title="GitHub"><i class="fa fa-github-alt fa-fw"></i><span class="sr-only">GitHub</span></a></li>
 </ul>
 </div>
 </div>
