Edited the index.htm link

--- a/index.htm
+++ b/index.htm
@@ -93,10 +93,10 @@
 <!-- <Header & Navigation> -->
 <header>
 <div class="container clearfix">
-<div class="a-logo"><a href="index.htm"><img src="gfx/logo.png" /><span class="sr-only">Home</span></a></div>
+<div class="a-logo"><a href="/"><img src="gfx/logo.png" /><span class="sr-only">Home</span></a></div>
 <nav class="a-nav-holder">
 <ul class="a-nav hidden-sm hidden-xs">
-<li class="active"><a href="index.htm">Home</a></li>
+<li class="active"><a href="/">Home</a></li>
 <li><a href="about.htm">About</a></li>
 <li><a href="https://www.behance.net/bos-eriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Go to Behance">Projects</a></li>
 <li><a href="http://boseriko.tumblr.com">Blog</a></li>
@@ -111,7 +111,7 @@
 
 <nav class="a-nav-holder-mobile">
 <ul class="a-nav-mobile">
-<li class="active"><a href="index.htm">Home</a></li>
+<li class="active"><a href="/">Home</a></li>
 <li><a href="about.htm">About</a></li>
 <li><a href="https://www.behance.net/bos-eriko" target="_blank">Projects</a></li>
 <li><a href="http://boseriko.tumblr.com">Blog</a></li>
