Added the testimonies block

--- a/index.htm
+++ b/index.htm
@@ -212,6 +212,104 @@
 
 
 
+<!-- <Testimonies> -->
+<div class="jumbotron a-testimonies-jumbotron">
+<div class="container">
+<div class="a-testimonies-title">
+<h1>Testimonies</h1>
+<hr />
+<p>Their kind words.</p>
+</div>
+<div class="row">
+<div class="col-md-4 col-sm-6">
+<div class="a-testimony-holder">
+<img src="http://i.imgur.com/pQLFQKC.png" />
+<div class="a-testimony-arrow"></div>
+<div class="a-testimony-arrow-border"></div>
+<div class="a-testimony-message">
+<div class="a-testimony-message-inside">
+<i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i>
+</div>
+<div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 col-sm-6">
+<div class="a-testimony-holder">
+<img src="http://i.imgur.com/pQLFQKC.png" />
+<div class="a-testimony-arrow"></div>
+<div class="a-testimony-arrow-border"></div>
+<div class="a-testimony-message">
+<div class="a-testimony-message-inside">
+<i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i>
+</div>
+<div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+</div>
+</div>
+</div>
+<div class="clearfix visible-sm-block"></div>
+<div class="col-md-4 col-sm-6">
+<div class="a-testimony-holder">
+<img src="http://i.imgur.com/pQLFQKC.png" />
+<div class="a-testimony-arrow"></div>
+<div class="a-testimony-arrow-border"></div>
+<div class="a-testimony-message">
+<div class="a-testimony-message-inside">
+<i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i>
+</div>
+<div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+</div>
+</div>
+</div>
+<div class="clearfix visible-lg-block visible-md-block"></div>
+<div class="col-md-4 col-sm-6">
+<div class="a-testimony-holder">
+<img src="http://i.imgur.com/pQLFQKC.png" />
+<div class="a-testimony-arrow"></div>
+<div class="a-testimony-arrow-border"></div>
+<div class="a-testimony-message">
+<div class="a-testimony-message-inside">
+<i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i>
+</div>
+<div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+</div>
+</div>
+</div>
+<div class="clearfix visible-sm-block"></div>
+<div class="col-md-4 col-sm-6">
+<div class="a-testimony-holder">
+<img src="http://i.imgur.com/pQLFQKC.png" />
+<div class="a-testimony-arrow"></div>
+<div class="a-testimony-arrow-border"></div>
+<div class="a-testimony-message">
+<div class="a-testimony-message-inside">
+<i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i>
+</div>
+<div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 col-sm-6">
+<div class="a-testimony-holder">
+<img src="http://i.imgur.com/pQLFQKC.png" />
+<div class="a-testimony-arrow"></div>
+<div class="a-testimony-arrow-border"></div>
+<div class="a-testimony-message">
+<div class="a-testimony-message-inside">
+<i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i>
+</div>
+<div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<!-- </Testimonies> -->
+
+
+
+
 
 <!-- <Hire Me> -->
 <div class="jumbotron a-hire-me-jumbotron">
