Changed testimonies spelling

--- a/index.htm
+++ b/index.htm
@@ -216,7 +216,7 @@
 <div class="jumbotron a-testimonies-jumbotron">
 <div class="container">
 <div class="a-testimonies-title">
-<h1>Testimonies</h1>
+<h1>Testimonials</h1>
 <hr />
 <p>Their kind words.</p>
 </div>
