Added comments for the Projects section

--- a/index.htm
+++ b/index.htm
@@ -57,6 +57,10 @@
 </div>
 <!-- </Connection Bar> --> 
 
+
+
+
+
 <!-- <Header & Navigation> -->
 <header>
   <div class="container clearfix">
@@ -86,6 +90,10 @@
 </nav>
 <!-- </Header & Navigation> --> 
 
+
+
+
+
 <!-- <Jumbotron> -->
 <div class="a-personal-jumbotron-wallpaper">
   <div class="jumbotron a-personal-jumbotron">
@@ -106,6 +114,10 @@
   </div>
 </div>
 <!-- </Jumbotron> --> 
+
+
+
+
 
 <!-- <Skills Showcase> -->
 <div class="jumbotron a-skills-showcase" id="skills-showcase">
@@ -153,6 +165,18 @@
   </div>
 </div>
 <!-- </Skills Showcase> --> 
+
+
+
+
+
+<!-- <Projects> -->
+
+<!-- </Projects> -->
+
+
+
+
 
 <!-- <Testimonies> -->
 <div class="jumbotron a-testimonies-jumbotron">
@@ -225,6 +249,10 @@
 </div>
 <!-- </Testimonies> --> 
 
+
+
+
+
 <!-- <Hire Me> -->
 <div class="jumbotron a-hire-me-jumbotron">
   <div class="container">
@@ -233,6 +261,10 @@
   </div>
 </div>
 <!-- </Hire Me> --> 
+
+
+
+
 
 <!-- <Footer> -->
 <footer>
@@ -244,6 +276,10 @@
   </div>
 </footer>
 <!-- </Footer> --> 
+
+
+
+
 
 <!-- <Scripts> --> 
 <script src="script/jquery-2.1.4.min.js"></script> 
