--- a/index.htm
+++ b/index.htm
@@ -251,20 +251,20 @@
     </div>
     <div class="row">
       <div class="col-md-4 col-sm-6">
-        <div class="a-testimony-holder"> <img src="http://i.imgur.com/pQLFQKC.png" />
+        <div class="a-testimony-holder"> <img src="http://i.imgur.com/aqsM516.jpg" />
           <div class="a-testimony-arrow"></div>
           <div class="a-testimony-message">
-            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i> </div>
-            <div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Just what I'm hoping for! Awesome work! I'll be asking you again next time if I have some work for you.<i class="fa fa-quote-right fa-fw"></i> </div>
+            <div class="a-testimony-message-person">&mdash; AJ Lavine</div>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6">
-        <div class="a-testimony-holder"> <img src="http://i.imgur.com/pQLFQKC.png" />
+        <div class="a-testimony-holder"> <img src="http://i.imgur.com/SsTOslY.jpg" />
           <div class="a-testimony-arrow"></div>
           <div class="a-testimony-message">
-            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i> </div>
-            <div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Oh my goodness. Your skills are professional. Someday your skills might get paid.<i class="fa fa-quote-right fa-fw"></i> </div>
+            <div class="a-testimony-message-person">&mdash; Khairul Norisam (GuildCraft)</div>
           </div>
         </div>
       </div>
