--- a/index.htm
+++ b/index.htm
@@ -233,6 +233,9 @@
 		</div>
 	  </div>
 	</div>
+	<div class="a-projects-more">
+	  <a href="https://www.behance.net/bos-eriko" target="_blank"><i class="fa fa-behance-square fa-fw"></i>&nbsp;View More Projects</a>
+	</div>
   </div>
 </div>
 <!-- </Projects> -->
@@ -251,59 +254,65 @@
     </div>
     <div class="row">
       <div class="col-md-4 col-sm-6">
-        <div class="a-testimony-holder"> <img src="http://i.imgur.com/aqsM516.jpg" />
+        <div class="a-testimony-holder">
+		  <img src="http://i.imgur.com/aqsM516.jpg" />
           <div class="a-testimony-arrow"></div>
           <div class="a-testimony-message">
-            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Just what I'm hoping for! Awesome work! I'll be asking you again next time if I have some work for you.<i class="fa fa-quote-right fa-fw"></i> </div>
-            <div class="a-testimony-message-person">&mdash; AJ Lavine</div>
+            <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>Just what I'm hoping for! Awesome work! I'll be asking you again next time if I have some work for you.<i class="fa fa-quote-right fa-fw"></i></div>
+            <div class="a-testimony-message-person">&mdash; AJ Lavine (Doodle It)</div>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6">
-        <div class="a-testimony-holder"> <img src="http://i.imgur.com/SsTOslY.jpg" />
+        <div class="a-testimony-holder">
+		  <img src="http://i.imgur.com/SsTOslY.jpg" />
           <div class="a-testimony-arrow"></div>
           <div class="a-testimony-message">
-            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Oh my goodness. Your skills are professional. Someday your skills might get paid.<i class="fa fa-quote-right fa-fw"></i> </div>
-            <div class="a-testimony-message-person">&mdash; Khairul Norisam (GuildCraft)</div>
+            <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>Oh my goodness. Your skills are professional. Someday your skills might get paid.<i class="fa fa-quote-right fa-fw"></i></div>
+            <div class="a-testimony-message-person">&mdash; Khairul Norisam (GridCraft)</div>
           </div>
         </div>
       </div>
       <div class="clearfix visible-sm-block"></div>
       <div class="col-md-4 col-sm-6">
-        <div class="a-testimony-holder"> <img src="http://i.imgur.com/pQLFQKC.png" />
+        <div class="a-testimony-holder">
+		  <img src="http://i.imgur.com/8ETMaKa.jpg" />
           <div class="a-testimony-arrow"></div>
           <div class="a-testimony-message">
-            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i> </div>
-            <div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+            <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>Nice! I was expecting a website for pc only but you went ahead and made it responsive. This will be really helpful for my business!<i class="fa fa-quote-right fa-fw"></i></div>
+            <div class="a-testimony-message-person">&mdash; Rommel Pasamonte (TechBuilds)</div>
           </div>
         </div>
       </div>
       <div class="clearfix visible-lg-block visible-md-block"></div>
       <div class="col-md-4 col-sm-6">
-        <div class="a-testimony-holder"> <img src="http://i.imgur.com/pQLFQKC.png" />
+        <div class="a-testimony-holder">
+		  <img src="http://i.imgur.com/jY7PSnR.jpg" />
           <div class="a-testimony-arrow"></div>
           <div class="a-testimony-message">
-            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i> </div>
-            <div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+            <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>This is some quality work.<i class="fa fa-quote-right fa-fw"></i></div>
+            <div class="a-testimony-message-person">&mdash; Mark Flint (B&amp;S Corp)</div>
           </div>
         </div>
       </div>
       <div class="clearfix visible-sm-block"></div>
       <div class="col-md-4 col-sm-6">
-        <div class="a-testimony-holder"> <img src="http://i.imgur.com/pQLFQKC.png" />
+        <div class="a-testimony-holder">
+		  <img src="http://i.imgur.com/0m10RLq.jpg" />
           <div class="a-testimony-arrow"></div>
           <div class="a-testimony-message">
-            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i> </div>
-            <div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+            <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>Thanks, bro. This is what I've been waiting for.<i class="fa fa-quote-right fa-fw"></i></div>
+            <div class="a-testimony-message-person">&mdash; MJ Vilda (exPet)</div>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6">
-        <div class="a-testimony-holder"> <img src="http://i.imgur.com/pQLFQKC.png" />
+        <div class="a-testimony-holder">
+		  <img src="http://i.imgur.com/kxkFDC5.jpg" />
           <div class="a-testimony-arrow"></div>
           <div class="a-testimony-message">
-            <div class="a-testimony-message-inside"> <i class="fa fa-quote-left fa-fw"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<i class="fa fa-quote-right fa-fw"></i> </div>
-            <div class="a-testimony-message-person">&mdash; Finn (Adventure Time)</div>
+            <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>He made it really fast for me while maintaining the quality of the work.<i class="fa fa-quote-right fa-fw"></i></div>
+            <div class="a-testimony-message-person">&mdash; Jaize Delan (Bike Right)</div>
           </div>
         </div>
       </div>
