added bing code

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="gfx/favicon.ico" type="image/x-icon"/>
 
     <!-- <Bing Webmaster Tools> -->
-
+    <meta name="msvalidate.01" content="693FE677A7469F68448FB046CA455D97" />
     <!-- </Bing Webmaster Tools> -->
 
     <!-- <Open Graph> -->
