added alt to the 6 testimonies image

--- a/index.htm
+++ b/index.htm
@@ -259,7 +259,7 @@
                             <div class="row">
                                 <div class="col-md-4 col-sm-6">
                                     <div class="a-testimony-holder">
-                                        <img src="http://i.imgur.com/aqsM516.jpg" />
+                                        <img src="http://i.imgur.com/aqsM516.jpg" alt="AJ Lavine" />
                                         <div class="a-testimony-arrow"></div>
                                         <div class="a-testimony-message">
                                             <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>Just what I'm hoping for! Awesome work! I'll be asking you again next time if I have some work for you.<i class="fa fa-quote-right fa-fw"></i></div>
@@ -269,7 +269,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-6">
                                     <div class="a-testimony-holder">
-                                        <img src="http://i.imgur.com/SsTOslY.jpg" />
+                                        <img src="http://i.imgur.com/SsTOslY.jpg" alt="Khairul Norisam" />
                                         <div class="a-testimony-arrow"></div>
                                         <div class="a-testimony-message">
                                             <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>Oh my goodness. Your skills are professional. Someday your skills might get paid.<i class="fa fa-quote-right fa-fw"></i></div>
@@ -280,7 +280,7 @@
                                 <div class="clearfix visible-sm-block"></div>
                                 <div class="col-md-4 col-sm-6">
                                     <div class="a-testimony-holder">
-                                        <img src="http://i.imgur.com/8ETMaKa.jpg" />
+                                        <img src="http://i.imgur.com/8ETMaKa.jpg" alt="Rommel Pasamonte" />
                                         <div class="a-testimony-arrow"></div>
                                         <div class="a-testimony-message">
                                             <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>Nice! I was expecting a website for pc only but you went ahead and made it responsive. This will be really helpful for my business!<i class="fa fa-quote-right fa-fw"></i></div>
@@ -291,7 +291,7 @@
                                 <div class="clearfix visible-lg-block visible-md-block"></div>
                                 <div class="col-md-4 col-sm-6">
                                     <div class="a-testimony-holder">
-                                        <img src="http://i.imgur.com/jY7PSnR.jpg" />
+                                        <img src="http://i.imgur.com/jY7PSnR.jpg" alt="Mark Flint" />
                                         <div class="a-testimony-arrow"></div>
                                         <div class="a-testimony-message">
                                             <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>This is some quality work.<i class="fa fa-quote-right fa-fw"></i></div>
@@ -302,7 +302,7 @@
                                 <div class="clearfix visible-sm-block"></div>
                                 <div class="col-md-4 col-sm-6">
                                     <div class="a-testimony-holder">
-                                        <img src="http://i.imgur.com/0m10RLq.jpg" />
+                                        <img src="http://i.imgur.com/0m10RLq.jpg" alt="MJ Vilda" />
                                         <div class="a-testimony-arrow"></div>
                                         <div class="a-testimony-message">
                                             <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>Thanks, bro. This is what I've been waiting for.<i class="fa fa-quote-right fa-fw"></i></div>
@@ -312,7 +312,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-6">
                                     <div class="a-testimony-holder">
-                                        <img src="http://i.imgur.com/kxkFDC5.jpg" />
+                                        <img src="http://i.imgur.com/kxkFDC5.jpg" alt="Jaize Delan" />
                                         <div class="a-testimony-arrow"></div>
                                         <div class="a-testimony-message">
                                             <div class="a-testimony-message-inside"><i class="fa fa-quote-left fa-fw"></i>He made it really fast for me while maintaining the quality of the work.<i class="fa fa-quote-right fa-fw"></i></div>
