--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Bos Eriko Reyes's Personal Portfolio">
-    <meta name="keywords" content="Front-end Website Developer, Programmer, Gamer, Blogger, Thinker">
-    <title>Bos Eriko Reyes - Front-end Website Developer</title>
+    <meta name="keywords" content="Front-end Website Developer/Designer, Programmer, Gamer, Blogger, Thinker">
+    <title>Bos Eriko Reyes - Front-end Website Developer/Designer</title>
     <link rel="stylesheet" href="style/bootstrap.min.css">
     <link rel="stylesheet" href="style/bootstrap-theme.min.css">
     <link type="text/css" rel="StyleSheet" href="style/personal.css" />
@@ -18,8 +18,8 @@
     <!-- </Bing Webmaster Tools> -->
 
     <!-- <Open Graph> -->
-    <meta property="og:title" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Bos Eriko Reyes - Front-end Website Developer/Designer" />
+    <meta property="og:image" content="gfx/display-picture.jpg" />
     <meta property="og:description" content="Bos Eriko Reyes's Personal Portfolio" />
     <!-- </Open Graph> -->
 
@@ -114,7 +114,7 @@
                     <h2>Hello, I'm Bos!</h2>
                 </div>
                 <div>
-                    <p>And I'm a front-end website developer.</p>
+                    <p>And I'm a front-end website developer/designer.</p>
                 </div>
                 <div class="a-personal-jumbotron-button"><a href="#skills-showcase"><i class="fa fa-rocket fa-fw"></i>&nbsp;See my skills</a></div>
             </div>
