Added a container on the Under Maintenance word

--- a/about.htm
+++ b/about.htm
@@ -100,7 +100,7 @@
     <!-- </Header & Navigation> -->
 
 
-    under maintenance
+    <div class="container">Under Maintenance</div>
 
 
     <!-- <Footer> -->
