Finished the about page

--- a/about.htm
+++ b/about.htm
@@ -100,7 +100,101 @@
     <!-- </Header & Navigation> -->
 
 
-    <div class="container">Under Maintenance</div>
+    <div class="container">
+        <div class="col-md-7 col-sm-12">
+            <!-- <Details> -->
+            <div class="a-about-me-details">
+                <h1>About Me</h1>
+                <h3>Are you looking at me?</h3>
+                <p>Hello! My name is <strong>Bos Eriko Reyes</strong> and I'm a front-end website developer/designer based on the Philippines. I've been creating websites for over three years now. It started out as a hobby but as time goes by I soon noticed that there was a lot of things to learn regarding the field. Fast forward to the present and I am now capable of creating websites from scratch that businesses and individuals can use.</p>
+                <p>I'm comfortable when it comes to HTML and CSS and I can also use jQuery. I mainly use bootstrap to make my websites responsive. I can use WordPress and uCoz as a back-end of a website but I can be flexible and learn new things depending on what the client asks me to do. I am also capable of working in a team by means of Github, well-documented codes and great communication skills.</p>
+                <p>I am not limited to front-end, though. I know how to use Python, AngularJS, C++ and Java. My knowledge on them may not be as good as my knowledge on front-end but I'm not going to let it end there. I love fixing bugs and adding new features to programs to make it better. I'm also reading more about the languages that I've mentioned above every day to not let my knowledge on programming burn out because there's a lot to learn.</p>
+                <p>In summary, I am a front-end website developer/designer who wants to be better on programming, too. If you're interested in hiring me, you can do so by clicking the red "Hire Me" button on the header of this website.</p>
+            </div>
+            <!-- </Details> -->
+        </div>
+        <div class="col-md-5 col-sm-12">
+            <!-- <More Details>-->
+            <div class="a-about-me-details">
+                <div class="a-about-me-details-image"><img src="gfx/about-display-picture.jpg" alt="About Display Picture" /></div>
+                <ul class="a-about-me-social">
+                    <li>
+                        <a href="https://www.facebook.com/bos.eriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Facebook">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-facebook fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://plus.google.com/+BosErikoReyes" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Google+">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-google-plus fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/BosEriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Twitter">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-twitter fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://boseriko.tumblr.com/" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Tumblr">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-tumblr fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.pinterest.com/boseriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Pinterest">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-pinterest fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.behance.net/bos-eriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Behance">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-behance fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/boseriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Instagram">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-instagram fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/bos-eriko-reyes-203362a9" target="_blank" data-toggle="tooltip" data-placement="bottom" title="LinkedIn">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-linkedin fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/BosEriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Github">
+                            <span class="fa-stack fa fa-fw">
+                            	<i class="fa fa-circle fa-stack-2x"></i>
+                            	<i class="fa fa-github fa-stack-1x"></i>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- </More Details>-->
+        </div>
+    </div>
 
 
     <!-- <Footer> -->
