behance icon changed

--- a/about.htm
+++ b/about.htm
@@ -186,7 +186,7 @@
                         <a href="https://github.com/BosEriko" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Github">
                             <span class="fa-stack fa fa-fw">
                             	<i class="fa fa-circle fa-stack-2x"></i>
-                            	<i class="fa fa-github fa-stack-1x"></i>
+                            	<i class="fa fa-github-alt fa-stack-1x"></i>
                             </span>
                         </a>
                     </li>
