added a new project on the Projects section

--- a/index.htm
+++ b/index.htm
@@ -188,6 +188,20 @@
                 <p>A sneak peek of my works.</p>
             </div>
             <div class="row">
+            <!-- <Project Entry> -->
+            <div class="col-md-3 col-sm-6">
+                <div class="a-projects-holder">
+                    <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/skMABbI.jpg" alt="Personal Portfolio"/></a>
+                    <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" class="a-projects-title">Personal Portfolio</a>
+                    <p>My personal portfolio that is hosted on Github and Tumblr. Bootstrap and jQuery are used on this project.</p>
+                    <div class="a-projects-links">
+                        <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Feb 27, 2016</div>
+                        <a href="http://boseriko.github.io/" target="blank" data-toggle="tooltip" data-placement="bottom" title="Go to Website"><i class="fa fa-link fa-fw"></i></a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
+                    </div>
+                </div>
+                <!-- </Project Entry> -->
                 <!-- <Project Entry> -->
                 <div class="col-md-3 col-sm-6">
                     <div class="a-projects-holder">
@@ -202,20 +216,6 @@
                         </div>
                     </div>
                     <!-- </Project Entry> -->
-                    <!-- <Project Entry> -->
-                    <div class="col-md-3 col-sm-6">
-                        <div class="a-projects-holder">
-                            <a href="#" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/TONVBVB.jpg" alt="Lorem Ipsum"/></a>
-                            <a href="#" target="_blank" class="a-projects-title">Lorem Ipsum</a>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            <div class="a-projects-links">
-                                <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Jan 01, 2000</div>
-                                <a href="#" target="blank" data-toggle="tooltip" data-placement="bottom" title="Go to Website"><i class="fa fa-link fa-fw"></i></a>
-                                &nbsp;&nbsp;&nbsp;
-                                <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
-                            </div>
-                        </div>
-                        <!-- </Project Entry> -->
                         <div class="clearfix visible-sm-block"></div>
                         <!-- <Project Entry> -->
                         <div class="col-md-3 col-sm-6">
