--- a/index.htm
+++ b/index.htm
@@ -13,38 +13,38 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="gfx/favicon.ico" type="image/x-icon"/>
 
-    <!-- <Bing Webmaster Tools> -->
+    <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="693FE677A7469F68448FB046CA455D97" />
-    <!-- </Bing Webmaster Tools> -->
+    <!-- /Bing Webmaster Tools -->
 
-    <!-- <Open Graph> -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Bos Eriko Reyes - Front-end Website Developer/Designer" />
     <meta property="og:image" content="gfx/display-picture.jpg" />
     <meta property="og:description" content="Bos Eriko Reyes's Personal Portfolio" />
-    <!-- </Open Graph> -->
+    <!-- /Open Graph -->
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- <Google Analytics> -->
+    <!-- Google Analytics -->
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-73778845-1', 'auto');
-      ga('send', 'pageview');
+    ga('create', 'UA-73778845-1', 'auto');
+    ga('send', 'pageview');
 
     </script>
-    <!-- </Google Analytics> -->
+    <!-- /Google Analytics -->
 
 </head>
 <body id="a-top-button">
 
-    <!-- <Connection Bar> -->
+    <!-- Connection Bar -->
     <div class="a-connection-bar clearfix hidden-xs">
         <div class="container">
             <ul class="a-connection-text">
@@ -65,13 +65,13 @@
             </ul>
         </div>
     </div>
-    <!-- </Connection Bar> -->
+    <!-- /Connection Bar -->
 
 
 
 
 
-    <!-- <Header & Navigation> -->
+    <!-- Header & Navigation -->
     <header>
         <div class="container clearfix">
             <div class="a-logo"><a href="/"><img src="gfx/logo.png" alt="Logo" /><span class="sr-only">Home</span></a></div>
@@ -98,13 +98,13 @@
             <li><a href="http://goo.gl/forms/ERQnpbVSv4" target="_blank">Hire Me</a></li>
         </ul>
     </nav>
-    <!-- </Header & Navigation> -->
+    <!-- /Header & Navigation -->
 
 
 
 
 
-    <!-- <Jumbotron> -->
+    <!-- Jumbotron -->
     <div class="a-personal-jumbotron-wallpaper">
         <div class="jumbotron a-personal-jumbotron">
             <div class="visible-lg visible-md" style="height:25px;"></div>
@@ -123,13 +123,13 @@
             <div class="visible-lg" style="height:25px;"></div>
         </div>
     </div>
-    <!-- </Jumbotron> -->
+    <!-- /Jumbotron -->
 
 
 
 
 
-    <!-- <Skills Showcase> -->
+    <!-- Skills Showcase -->
     <div class="jumbotron a-skills-showcase" id="skills-showcase">
         <div class="container">
             <div class="a-skills-showcase-title">
@@ -174,13 +174,13 @@
             </div>
         </div>
     </div>
-    <!-- </Skills Showcase> -->
+    <!-- /Skills Showcase -->
 
 
 
 
 
-    <!-- <Projects> -->
+    <!-- Projects -->
     <div class="jumbotron a-projects-jumbotron">
         <div class="container">
             <div class="a-projects-title">
@@ -189,50 +189,50 @@
                 <p>A sneak peek of my works.</p>
             </div>
             <div class="row">
-            <!-- <Project Entry> -->
-            <div class="col-md-3 col-sm-6">
-                <div class="a-projects-holder">
-                    <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/skMABbI.jpg" alt="Personal Portfolio"/></a>
-                    <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" class="a-projects-title">Personal Portfolio</a>
-                    <p>My personal portfolio that is hosted on Github and Tumblr. Bootstrap and jQuery are used on this project.</p>
-                    <div class="a-projects-links">
-                        <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Feb 27, 2016</div>
-                        <a href="http://boseriko.github.io/" target="blank" data-toggle="tooltip" data-placement="bottom" title="Go to Website"><i class="fa fa-link fa-fw"></i></a>
-                        &nbsp;&nbsp;&nbsp;
-                        <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
-                    </div>
-                </div>
-                <!-- </Project Entry> -->
-                <!-- <Project Entry> -->
+                <!-- Project Entry -->
                 <div class="col-md-3 col-sm-6">
                     <div class="a-projects-holder">
-                        <a href="https://www.behance.net/gallery/33483687/Kuru-Anime-Anime-Social-Network" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/nzU2QaA.jpg" alt="Kuru Anime"/></a>
-                        <a href="https://www.behance.net/gallery/33483687/Kuru-Anime-Anime-Social-Network" target="_blank" class="a-projects-title">Kuru Anime</a>
-                        <p>An anime social network born from Google+. The front-end was designed by me while the back-end used a CMS called uCoz.</p>
+                        <a href="https://www.behance.net/gallery/34958619/Speed-Site" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/RtdOcQF.png" alt="Speed Site"/></a>
+                        <a href="https://www.behance.net/gallery/34958619/Speed-Site" target="_blank" class="a-projects-title">Speed Site</a>
+                        <p>This is just a reference site for my employer. I thought it was worth posting because even though it's simple it shows that I can also apply simple animations.</p>
                         <div class="a-projects-links">
-                            <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Jan 30, 2016</div>
-                            <a href="http://kuru-anime.at.ua/" target="blank" data-toggle="tooltip" data-placement="bottom" title="Go to Website"><i class="fa fa-link fa-fw"></i></a>
+                            <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Mar 12, 2016</div>
+                            <a href="https://github.com/BosEriko/Speed-Site" target="blank" data-toggle="tooltip" data-placement="bottom" title="Open on GitHub"><i class="fa fa-github-alt fa-fw"></i></a>
                             &nbsp;&nbsp;&nbsp;
-                            <a href="https://www.behance.net/gallery/33483687/Kuru-Anime-Anime-Social-Network" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
+                            <a href="https://www.behance.net/gallery/34958619/Speed-Site" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
                         </div>
                     </div>
-                    <!-- </Project Entry> -->
+                    <!-- /Project Entry -->
+                    <!-- Project Entry -->
+                    <div class="col-md-3 col-sm-6">
+                        <div class="a-projects-holder">
+                            <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/skMABbI.jpg" alt="Personal Portfolio"/></a>
+                            <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" class="a-projects-title">Personal Portfolio</a>
+                            <p>My personal portfolio that is hosted on Github and Tumblr. Bootstrap and jQuery are used on this project.</p>
+                            <div class="a-projects-links">
+                                <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Feb 27, 2016</div>
+                                <a href="http://boseriko.github.io/" target="blank" data-toggle="tooltip" data-placement="bottom" title="Go to Website"><i class="fa fa-link fa-fw"></i></a>
+                                &nbsp;&nbsp;&nbsp;
+                                <a href="https://www.behance.net/gallery/34464413/Personal-Portfolio" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
+                            </div>
+                        </div>
+                        <!-- /Project Entry -->
                         <div class="clearfix visible-sm-block"></div>
-                        <!-- <Project Entry> -->
+                        <!-- Project Entry -->
                         <div class="col-md-3 col-sm-6">
                             <div class="a-projects-holder">
-                                <a href="#" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/TONVBVB.jpg" alt="Lorem Ipsum"/></a>
-                                <a href="#" target="_blank" class="a-projects-title">Lorem Ipsum</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <a href="https://www.behance.net/gallery/33483687/Kuru-Anime-Anime-Social-Network" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/nzU2QaA.jpg" alt="Kuru Anime"/></a>
+                                <a href="https://www.behance.net/gallery/33483687/Kuru-Anime-Anime-Social-Network" target="_blank" class="a-projects-title">Kuru Anime</a>
+                                <p>An anime social network born from Google+. The front-end was designed by me while the back-end used a CMS called uCoz.</p>
                                 <div class="a-projects-links">
-                                    <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Jan 01, 2000</div>
-                                    <a href="#" target="blank" data-toggle="tooltip" data-placement="bottom" title="Go to Website"><i class="fa fa-link fa-fw"></i></a>
+                                    <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Jan 30, 2016</div>
+                                    <a href="http://kuru-anime.at.ua/" target="blank" data-toggle="tooltip" data-placement="bottom" title="Go to Website"><i class="fa fa-link fa-fw"></i></a>
                                     &nbsp;&nbsp;&nbsp;
-                                    <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
+                                    <a href="https://www.behance.net/gallery/33483687/Kuru-Anime-Anime-Social-Network" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
                                 </div>
                             </div>
-                            <!-- </Project Entry> -->
-                            <!-- <Project Entry> -->
+                            <!-- /Project Entry -->
+                            <!-- Project Entry -->
                             <div class="col-md-3 col-sm-6">
                                 <div class="a-projects-holder">
                                     <a href="#" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/TONVBVB.jpg" alt="Lorem Ipsum"/></a>
@@ -245,20 +245,20 @@
                                         <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
                                     </div>
                                 </div>
-                                <!-- </Project Entry> -->
+                                <!-- /Project Entry -->
                             </div>
                             <div class="a-projects-more">
                                 <a href="https://www.behance.net/bos-eriko" target="_blank"><i class="fa fa-behance-square fa-fw"></i>&nbsp;View More Projects</a>
                             </div>
                         </div>
                     </div>
-                    <!-- </Projects> -->
+                    <!-- /Projects -->
 
 
 
 
 
-                    <!-- <Testimonies> -->
+                    <!-- Testimonies -->
                     <div class="jumbotron a-testimonies-jumbotron">
                         <div class="container">
                             <div class="a-testimonies-title">
@@ -333,26 +333,26 @@
                             </div>
                         </div>
                     </div>
-                    <!-- </Testimonies> -->
+                    <!-- /Testimonies -->
 
 
 
 
 
-                    <!-- <Hire Me> -->
+                    <!-- Hire Me -->
                     <div class="jumbotron a-hire-me-jumbotron">
                         <div class="container">
                             <h1>Need a responsive website?</h1>
                             <div><a href="http://goo.gl/forms/ERQnpbVSv4" target="_blank"><i class="fa fa-heart fa-fw"></i>&nbsp;Hire Me</a></div>
                         </div>
                     </div>
-                    <!-- </Hire Me> -->
+                    <!-- /Hire Me -->
 
 
 
 
 
-                    <!-- <Footer> -->
+                    <!-- Footer -->
                     <footer>
                         <div class="container">
                             <div class="row">
@@ -361,17 +361,17 @@
                             </div>
                         </div>
                     </footer>
-                    <!-- </Footer> -->
+                    <!-- /Footer -->
+
+                    
 
 
 
-
-
-                    <!-- <Scripts> -->
+                    <!-- Scripts -->
                     <script src="script/jquery-2.1.4.min.js"></script>
                     <script src="script/bootstrap.min.js"></script>
                     <script src="script/personal.js"></script>
-                    <!-- </Scripts> -->
+                    <!-- /Scripts -->
 
                 </body>
                 </html>
