--- a/about.htm
+++ b/about.htm
@@ -13,22 +13,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="gfx/favicon.ico" type="image/x-icon"/>
 
-    <!-- <Bing Webmaster Tools> -->
+    <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="693FE677A7469F68448FB046CA455D97" />
-    <!-- </Bing Webmaster Tools> -->
+    <!-- /Bing Webmaster Tools -->
 
-    <!-- <Open Graph> -->
+    <!-- Open Graph -->
     <meta property="og:title" content="About Bos Eriko Reyes" />
     <meta property="og:image" content="gfx/display-picture.jpg" />
     <meta property="og:description" content="Bos Eriko Reyes's Personal Portfolio" />
-    <!-- </Open Graph> -->
+    <!-- /Open Graph -->
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- <Google Analytics> -->
+    <!-- Google Analytics -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -39,12 +39,12 @@
     ga('send', 'pageview');
 
     </script>
-    <!-- </Google Analytics> -->
+    <!-- /Google Analytics -->
 
 </head>
 <body id="a-top-button">
 
-    <!-- <Connection Bar> -->
+    <!-- Connection Bar -->
     <div class="a-connection-bar clearfix hidden-xs">
         <div class="container">
             <ul class="a-connection-text">
@@ -65,13 +65,13 @@
             </ul>
         </div>
     </div>
-    <!-- </Connection Bar> -->
+    <!-- /Connection Bar -->
 
 
 
 
 
-    <!-- <Header & Navigation> -->
+    <!-- Header & Navigation -->
     <header>
         <div class="container clearfix">
             <div class="a-logo"><a href="/"><img src="gfx/logo.png" alt="Logo" /><span class="sr-only">Home</span></a></div>
@@ -98,12 +98,12 @@
             <li><a href="http://goo.gl/forms/ERQnpbVSv4" target="_blank">Hire Me</a></li>
         </ul>
     </nav>
-    <!-- </Header & Navigation> -->
+    <!-- /Header & Navigation -->
 
 
     <div class="container">
         <div class="col-md-7 col-sm-12">
-            <!-- <Details> -->
+            <!-- Details -->
             <div class="a-about-me-details">
                 <h1>About Me</h1>
                 <h3>Are you looking at me?</h3>
@@ -112,10 +112,10 @@
                 <p>I am not limited to front-end, though. I know how to use Python, AngularJS, C++ and Java. My knowledge on them may not be as good as my knowledge on front-end but I'm not going to let it end there. I love fixing bugs and adding new features to programs to make it better. I'm also reading more about the languages that I've mentioned above every day to not let my knowledge on programming burn out because there's a lot to learn.</p>
                 <p>In summary, I am a front-end website developer/designer who wants to be better on programming. If you're interested in hiring me, you can do so by filling up the form <a href="http://goo.gl/forms/ERQnpbVSv4" target="_blank">here</a>.</p>
             </div>
-            <!-- </Details> -->
+            <!-- /Details -->
         </div>
         <div class="col-md-5 col-sm-12">
-            <!-- <More Details>-->
+            <!-- More Details -->
             <div class="a-about-me-details">
                 <div class="a-about-me-details-image"><img src="gfx/about-display-picture.jpg" alt="About Display Picture" /></div>
                 <ul class="a-about-me-social">
@@ -201,12 +201,12 @@
                     </li>
                 </ul>
             </div>
-            <!-- </More Details>-->
+            <!-- /More Details-->
         </div>
     </div>
 
 
-    <!-- <Footer> -->
+    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
@@ -215,17 +215,17 @@
             </div>
         </div>
     </footer>
-    <!-- </Footer> -->
+    <!-- /Footer -->
 
 
 
 
 
-    <!-- <Scripts> -->
+    <!-- Scripts -->
     <script src="script/jquery-2.1.4.min.js"></script>
     <script src="script/bootstrap.min.js"></script>
     <script src="script/personal.js"></script>
-    <!-- </Scripts> -->
+    <!-- /Scripts -->
 
 </body>
 </html>
