Changed the e-mail on top to mail@boseriko.com

--- a/about.htm
+++ b/about.htm
@@ -49,7 +49,7 @@
         <div class="container">
             <ul class="a-connection-text">
                 <li><i class="fa fa-phone fa-fw"></i>&nbsp;+63935-382-0229</li>
-                <li><i class="fa fa-envelope fa-fw"></i>&nbsp;bos.eriko@gmail.com</li>
+                <li><i class="fa fa-envelope fa-fw"></i>&nbsp;mail@boseriko.com</li>
             </ul>
             <ul class="a-connection-icons">
                 <li><a href="https://www.facebook.com/bos.eriko" target="_blank" class="facebook" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook fa-fw"></i><span class="sr-only">Facebook</span></a></li>
